--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "forecast-node-api",
   "version": "1.0.0",
-  "description": "Typescript Forecast NodeJS API",
+  "description": "Typescript Forecast NodeJS API test",
   "main": "index.js",
   "scripts": {
     "test": "yarn test:unit && yarn test:functional",
