--- a/.github/workflows/full-workflow.yml
+++ b/.github/workflows/full-workflow.yml
@@ -1,3 +1,6 @@
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
 name: Complete workflow
 
 on: ['push']
@@ -10,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.18.2]
+        node-version: [12.x]
         mongodb-version: [4.2]
 
     steps:
