--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.0.0",
+    "ts-jest": "26.1.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
