--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "forecast-node-api",
   "version": "1.0.0",
-  "description": "Typescript Forecast NodeJS API test",
+  "description": "Typescript Forecast NodeJS API",
   "main": "index.js",
   "scripts": {
     "test": "yarn test:unit && yarn test:functional",
@@ -80,7 +80,7 @@
     "pino-pretty": "^4.0.0",
     "prettier": "^2.0.5",
     "supertest": "^4.0.2",
-    "ts-jest": "26.1.0",
+    "ts-jest": "^26.0.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
