--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "^1.19.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^3.16.1",
     "express-pino-logger": "^5.0.0",
@@ -57,6 +58,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^3.0.0",
     "@types/config": "^0.0.36",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/express-pino-logger": "^4.0.2",
     "@types/express-rate-limit": "^5.0.0",
