--- a/.github/workflows/full-workflow.yml
+++ b/.github/workflows/full-workflow.yml
@@ -42,6 +42,6 @@ jobs:
 
     - name: Deployment
       if: github.ref == 'refs/heads/master'
-      run: git remote add umbler ssh://git@geonosis.deploy.umbler.com:9922/kz2l1yqk/forecast-dscamargo-com.git && git pull umbler master && git push umbler master
+      run: git remote add umbler ssh://git@geonosis.deploy.umbler.com:9922/kz2l1yqk/forecast-dscamargo-com.git && git push umbler master --force
       env:
         CI: true
